sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/valeriya-k8s-repo:valeriya-k8s-mariadb
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
      imagePullSecrets:
        - name: regcred
