wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/valeriya-k8s-repo:valeriya-k8s-wordpress
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
         - name: regcred
