ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: basic-ingress
  namespace: default
spec:
  ingressClassName: wordpress
  rules:
    - host: localhost
    # - host: test.internal
    # ^ for special host name, needs to be added into /etc/hosts though
      http:
        paths:
          # - host: localhost
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
